--- a/almurad-system/index.html
+++ b/almurad-system/index.html
@@ -6,20 +6,23 @@
 
   <title>تسجيل الدخول - نظام المراد</title>
 
-  <!-- ✅ أيقونة المتصفح والشاشة الرئيسية -->
-  <link rel="icon" type="image/png" href="almurad-logo.png">
-  <link rel="shortcut icon" href="almurad-logo.png">
-  <link rel="apple-touch-icon" href="almurad-logo.png">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="نظام المراد">
-  <meta name="theme-color" content="#043B64">
-  <link rel="manifest" href="manifest.json">
+<!-- 👇 تعريف اسم التطبيق للشاشة الرئيسية -->
+<meta name="apple-mobile-web-app-title" content="نظام المراد">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="theme-color" content="#043B64">
 
-  <!-- الخطوط -->
+<!-- ✅ روابط الشعار والمانيفست -->
+<link rel="icon" type="image/png" href="almurad-system/almurad-logo.png">
+<link rel="shortcut icon" href="almurad-system/almurad-logo.png">
+<link rel="apple-touch-icon" href="almurad-system/almurad-logo.png">
+<link rel="manifest" href="almurad-system/manifest.json">
+
+
+  <!-- الخط -->
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
-
   <style>
+
     body {
       font-family: 'Tajawal', sans-serif;
       background: linear-gradient(135deg, #043B64, #FF6B2D);
@@ -126,6 +129,7 @@
       margin-top: 10px;
     }
 
+
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(30px); }
       to { opacity: 1; transform: translateY(0); }
@@ -139,6 +143,7 @@
 </head>
 
 <body>
+
   <div class="login-container">
     <img src="almurad-logo.png" alt="شعار المراد" class="logo">
     <h2>تسجيل الدخول إلى نظام المراد</h2>
@@ -215,6 +220,8 @@
 
           localStorage.setItem("loggedInUser", JSON.stringify(foundUser));
           window.location.href = "dashboard.html";
+          sessionStorage.setItem("userName", foundUser.username || foundUser.name || "غير معروف");
+
         } else {
           errorMsg.textContent = "❌ اسم المستخدم أو كلمة المرور غير صحيحة";
           errorMsg.style.display = "block";
@@ -226,5 +233,6 @@
       }
     });
   </script>
+
 </body>
 </html>
