--- a/almurad-system/dashboard.html
+++ b/almurad-system/dashboard.html
@@ -7,14 +7,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
 
   <style>
-    body {
-      margin: 0;
-font-family: 'Tajawal', sans-serif;
-      display: flex;
-      height: 100vh;
-      background: #f8f9fb;
-      overflow: hidden;
-    }
+   body {
+  margin: 0;
+  font-family: 'Tajawal', sans-serif;
+  display: flex;
+  height: 100vh;
+  background: linear-gradient(180deg, #f8f9fb 0%, #eef2f7 100%);
+  overflow: hidden;
+  color: #043B64;
+}
+
 
     /* الشريط الجانبي */
     .sidebar {
@@ -86,38 +88,80 @@ font-family: 'Tajawal', sans-serif;
       color: #043B64;
       cursor: pointer;
     }
+/* 🟢 تصميم الكروت الاحترافي */
+.stats {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  gap: 20px;
+  margin-top: 10px;
+}
 
-    .stats {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
-      gap: 20px;
-    }
+.card {
+  position: relative;
+  background: linear-gradient(145deg, #ffffff, #f4f6fa);
+  border-radius: 15px;
+  padding: 20px;
+  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.05);
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.25s ease;
+  overflow: hidden;
+}
 
-    .card {
-      background: white;
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-      text-align: center;
-      cursor: pointer;
-      transition: transform 0.2s;
-    }
+.card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
 
-    .card:hover {
-      transform: translateY(-3px);
-    }
+.card h3 {
+  color: #043B64;
+  margin: 0;
+  font-size: 16px;
+  font-weight: 700;
+}
 
-    .card h3 {
-      color: #043B64;
-      margin: 0;
-    }
+.card p {
+  margin: 12px 0 0;
+  font-size: 20px;
+  font-weight: bold;
+  color: #FF6B2D;
+  transition: color 0.3s;
+}
 
-    .card p {
-      color: #666;
-      margin: 10px 0 0;
-      font-weight: bold;
-      font-size: 15px;
-    }
+/* 🎨 ألوان الحالات */
+.card[data-status=""] h3 { color: #3498db; }            /* جديد */
+.card[data-status="مثبت"] h3 { color: #1abc9c; }        /* مثبت */
+.card[data-status="قيد المعالجة"] h3 { color: #e67e22; }
+.card[data-status="قيد التجهيز"] h3 { color: #f39c12; }
+.card[data-status="قيد التوصيل"] h3 { color: #f1c40f; }
+.card[data-status="تم التسليم"] h3 { color: #2ecc71; }
+.card[data-status="راجع"] h3 { color: #e74c3c; }
+.card[data-status="تم استلام الراجع"] h3 { color: #c0392b; }
+.card[data-status="رفض"] h3 { color: #7f8c8d; }
+.card[data-status="بانتظار البضاعة"] h3 { color: #9b59b6; }
+
+/* 🔸 تأثير مميز عند المرور */
+.card::after {
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: linear-gradient(135deg, rgba(255,107,45,0.15), rgba(4,59,100,0.15));
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  border-radius: 15px;
+  z-index: 0;
+}
+
+.card:hover::after {
+  opacity: 1;
+}
+
+.card > * {
+  position: relative;
+  z-index: 1;
+}
+
 
     .logout {
       background: #FF6B2D;
@@ -185,12 +229,26 @@ p, div, span, button {
       <div style="background:#FF6B2D;color:white;font-weight:bold;text-align:center;cursor:pointer" onclick="openNewOrder()">➕ إضافة طلب جديد</div>
     </div>
 
-    <!-- 🟢 الحسابات -->
-    <div class="menu-item" onclick="toggleMenu('financeMenu')">💰 الحسابات</div>
-    <div class="submenu" id="financeMenu">
-      <div>المبيعات</div>
-      <div>الأرباح</div>
-    </div>
+    <!-- 💰 الحسابات -->
+<div class="menu-item" onclick="toggleMenu('financeMenu')">💰 الحسابات</div>
+<div class="submenu" id="financeMenu">
+  <div onclick="openFinance('sales')">المبيعات</div>
+  <div onclick="openFinance('expenses')">المصروفات</div>
+  <div onclick="openFinance('profits')">الأرباح والخسائر</div>
+  <div onclick="openFinance('suppliers')">الموردين</div>
+  <div onclick="openFinance('balances')">الأرصدة</div>
+</div>
+
+<!-- 🏬 المخزن -->
+<div class="menu-item" onclick="toggleMenu('storeMenu')">🏬 المخزن</div>
+<div class="submenu" id="storeMenu">
+<div onclick="window.location.href='warehouse.html'">🏬 إدارة المخزون</div>
+<div onclick="window.location.href='warehouse-details.html'">📋 تفاصيل المنتجات</div>
+  <div onclick="openStore('purchases')">المشتريات</div>
+  <div onclick="openStore('daily')">📅 الجرد اليومي</div>
+  <div onclick="openStore('losses')">التالف والخسائر</div>
+  <div onclick="openStore('summary')">الجرد الشهري</div>
+</div>
 
     <!-- 📊 الإحصائيات -->
 <!-- 📊 الإحصائيات -->
@@ -202,6 +260,10 @@ p, div, span, button {
   <div onclick="openStatistics('advertisers')">إحصائيات المعلنين</div>
   <div onclick="openStatistics('daily')">الإحصائيات اليومية</div>
 </div>
+
+<!-- 🗂️ الأرشيف الشهري -->
+<div class="menu-item" onclick="openArchive()">🗂️ الأرشيف الشهري</div>
+
     <!-- 👥 إدارة المستخدمين (تظهر فقط للأدمن) -->
 <div class="menu-item" id="usersMenu" style="display:none;" onclick="openUsers()">👥 إدارة المستخدمين</div>
 
@@ -213,6 +275,8 @@ p, div, span, button {
   <!-- المحتوى -->
   <div class="content">
 <div class="header">
+
+
   <span id="sectionTitle">لوحة التحكم الرئيسية</span>
   <button class="menu-toggle" onclick="toggleSidebar()">☰</button>
 </div>
@@ -228,7 +292,13 @@ p, div, span, button {
       <div class="card" data-status="قيد التوصيل"><h3>قيد التوصيل</h3><p id="deliveringCount">0</p></div>
       <div class="card" data-status="تم التسليم"><h3>تم التسليم</h3><p id="deliveredCount">0</p></div>
       <div class="card" data-status="راجع"><h3>راجع</h3><p id="returnedCount">0</p></div>
+      <div class="card" data-status="تم استلام الراجع">
+  <h3>تم استلام الراجع</h3>
+  <p id="receivedReturnCount">0</p>
+</div>
+
       <div class="card" data-status="رفض"><h3>رفض</h3><p id="rejectedCount">0</p></div>
+    
       <div class="card" data-status="بانتظار البضاعة">
   <h3>بانتظار البضاعة</h3>
   <p id="waitingCount">0</p>
@@ -246,7 +316,8 @@ p, div, span, button {
   <!-- 🔹 سكربت -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js";
-    import { getDatabase, ref, get, child } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-database.js";
+import { getDatabase, ref, get, child, set, update } from "https://www.gstatic.com/firebasejs/10.13.0/firebase-database.js";
+    
 
     const firebaseConfig = {
       apiKey: "AIzaSyDtEJYJrmyP45qS2da8Cuc6y6Jv5VD0Uhc",
@@ -261,11 +332,14 @@ p, div, span, button {
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
 
-    const user = localStorage.getItem("loggedInUser");
-    // ✅ عرض زر إدارة المستخدمين فقط إذا كان الأدمن
-if (user === "admin") {
+const user = JSON.parse(localStorage.getItem("loggedInUser"));
+if (user && (user.username === "admin" || (user.roles && user.roles.includes("admin")))) {
   document.getElementById("usersMenu").style.display = "block";
+
+ 
 }
+
+
 
     if (!user) window.location.href = "index.html";
 
@@ -278,7 +352,7 @@ if (user === "admin") {
       const ordersData = snapshot.val();
       const orders = Object.values(ordersData);
 
-     const counts = {
+   const counts = {
   "": 0,
   "مثبت": 0,
   "قيد المعالجة": 0,
@@ -287,8 +361,10 @@ if (user === "admin") {
   "قيد التوصيل": 0,
   "تم التسليم": 0,
   "راجع": 0,
+  "تم استلام الراجع": 0,
   "رفض": 0
 };
+
 
       orders.forEach(o => {
         const st = (o.status || "").trim();
@@ -303,6 +379,8 @@ if (user === "admin") {
       document.getElementById("deliveringCount").textContent = counts["قيد التوصيل"];
       document.getElementById("deliveredCount").textContent = counts["تم التسليم"];
       document.getElementById("returnedCount").textContent = counts["راجع"];
+      document.getElementById("receivedReturnCount").textContent = counts["تم استلام الراجع"];
+
       document.getElementById("rejectedCount").textContent = counts["رفض"];
       document.getElementById("waitingCount").textContent = counts["بانتظار البضاعة"];
 
@@ -316,13 +394,16 @@ if (user === "admin") {
       window.location.href = "add-order.html";
     }
 
- function openStatistics(tab) {
+function openStatistics(tab) {
   if (tab === "employees") {
-    window.location.href = "stats-employees.html"; // ✅ الاسم الصحيح حسب الموجود فعلاً
+    window.location.href = "stats-employees.html";
+  } else if (tab === "advertisers") {
+    window.location.href = "stats-advertisers.html"; // ✅ هذه الصفحة الجديدة
   } else {
     window.location.href = `statistics.html?tab=${tab}`;
   }
 }
+
 
 
 
@@ -359,8 +440,10 @@ if (user === "admin") {
 const loggedUser = JSON.parse(localStorage.getItem("loggedInUser"));
 if (!loggedUser) window.location.href = "index.html";
 
-// 👋 عرض الاسم
-document.getElementById("userDisplay").textContent = `👋 مرحباً، ${loggedUser.user || loggedUser.username}`;
+const displayName = loggedUser.name || loggedUser.username || loggedUser.user || "غير معروف";
+document.getElementById("userDisplay").textContent = `👋 مرحباً، ${displayName}`;
+console.log(`مرحباً ${displayName}! تم تسجيل الدخول بنجاح ✅`);
+
 
 // 🧩 الصلاحيات
 const roles = loggedUser.roles || [];
@@ -480,8 +563,179 @@ function loadMotivationalQuote() {
 // 🚀 تنفيذ تلقائي عند الدخول للوحة التحكم
 loadMotivationalQuote();
 
+// ✅ فتح صفحات المخزن حسب القسم
+function openStore(tab) {
+  if (tab === "purchases") {
+    window.location.href = "purchases.html"; // صفحة المشتريات
+  } else if (tab === "daily") {
+    window.location.href = "daily-inventory.html"; // ✅ صفحة الجرد اليومي الجديدة
+  } else if (tab === "losses") {
+    window.location.href = "losses.html"; // صفحة التالف والخسائر
+  } else if (tab === "summary") {
+    window.location.href = "inventory-summary.html"; // صفحة الجرد الشهري
+  }
+}
+window.openStore = openStore;
+
+// 🔹 دالة التصفير الذكي
+async function monthlySmartReset() {
+  const dbRef = ref(db);
+  const monthKey = new Date().toISOString().slice(0,7); // مثال: 2025-11
+  const confirmReset = confirm("⚠️ هل أنت متأكد من تصفير بيانات الشهر؟ سيتم أرشفة الطلبات المنتهية والفواتير والحسابات.");
+
+  if (!confirmReset) return;
+
+  try {
+    // 🟠 جلب الطلبات
+    const ordersSnap = await get(child(dbRef, "orders"));
+    if (ordersSnap.exists()) {
+      const allOrders = ordersSnap.val();
+      const keepStatuses = ["مثبت", "قيد المعالجة", "قيد التجهيز", "قيد التوصيل", "راجع"];
+      const archiveStatuses = ["تم التسليم", "تم استلام الراجع", "رفض"];
+
+      const newOrders = {};
+      const archiveOrders = {};
+
+      for (const [id, o] of Object.entries(allOrders)) {
+        if (archiveStatuses.includes(o.status)) archiveOrders[id] = o;
+        else if (keepStatuses.includes(o.status)) newOrders[id] = o;
+      }
+
+      await set(ref(db, `archive/${monthKey}/orders`), archiveOrders);
+      await set(ref(db, "orders"), newOrders);
+    }
+
+    // 🟢 الفواتير والحسابات
+    const invoicesSnap = await get(child(dbRef, "invoices"));
+    const accountsSnap = await get(child(dbRef, "accounts"));
+    const invoices = invoicesSnap.exists() ? invoicesSnap.val() : {};
+    const accounts = accountsSnap.exists() ? accountsSnap.val() : {};
+
+    await set(ref(db, `archive/${monthKey}/invoices`), invoices);
+    await set(ref(db, `archive/${monthKey}/accounts`), accounts);
+
+    await set(ref(db, "invoices"), {});
+    await set(ref(db, "accounts"), {});
+
+    // 🟣 تنظيف سجل المعالجات بالمخزن
+    const warehouseSnap = await get(child(dbRef, "warehouse"));
+    if (warehouseSnap.exists()) {
+      const warehouse = warehouseSnap.val();
+      for (const name in warehouse) {
+        warehouse[name].processedOrders = {};
+      }
+      await update(ref(db, "warehouse"), warehouse);
+    }
+
+    alert("✅ تم تصفير بيانات الشهر وأرشفتها بنجاح!");
+  } catch (err) {
+    console.error("❌ خطأ أثناء تصفير البيانات:", err);
+    alert("حدث خطأ أثناء التصفير. تحقق من الاتصال بالإنترنت.");
+  }
+}
+// 🗂️ فتح صفحة الأرشيف الشهري
+function openArchive() {
+  window.location.href = "monthly-archive.html";
+}
+window.openArchive = openArchive;
 
   </script>
+<!-- ✅ نظام إشعار الطلب الجديد (نفس كود صفحة الطلبات) -->
+<script>
+// ✅ تعطيل تشغيل الصوت عند أول تفاعل (صامت)
+document.addEventListener("click", () => {
+  window.soundAllowed = true; // مجرد تفعيل بدون أي صوت
+});
+
+
+  // ✅ دالة عرض الإشعار والصوت (نفس الموجود بصفحة الطلبات)
+  function showNewOrderNotification(count = 1) {
+    const oldBar = document.getElementById("newOrderBar");
+    if (oldBar) oldBar.remove();
+
+    const bar = document.createElement("div");
+    bar.id = "newOrderBar";
+    bar.innerHTML = `
+      <div style="display:flex;align-items:center;gap:12px;animation:fadeInUp 0.4s ease">
+        <span style="font-size:28px;background:#fff;color:#28a745;border-radius:50%;
+        width:46px;height:46px;display:flex;align-items:center;justify-content:center;
+        box-shadow:0 0 10px rgba(255,255,255,0.3)">💵</span>
+        <div>
+          <div style="font-weight:bold;font-size:16px;">وصل ${count} طلب جديد${count>1?"ات":""}!</div>
+          <div style="font-size:13px;opacity:0.9;">تحقق الآن من الطلبات</div>
+        </div>
+      </div>
+    `;
+    Object.assign(bar.style, {
+      position: "fixed",
+      bottom: "25px",
+      right: "25px",
+      background: "linear-gradient(135deg,#28a745,#20c997)",
+      color: "white",
+      padding: "14px 22px",
+      borderRadius: "16px",
+      fontFamily: "Tajawal, sans-serif",
+      boxShadow: "0 8px 25px rgba(0,0,0,0.3)",
+      zIndex: "999999",
+      cursor: "pointer",
+      opacity: "1",
+      transition: "all 0.6s ease"
+    });
+    document.body.appendChild(bar);
+
+    if (window.soundAllowed) {
+const audio = new Audio("cash-register-kaching.mp3");
+      audio.volume = 1.0;
+      audio.play().catch(err => console.warn("🔇 فشل تشغيل الصوت:", err));
+    }
+
+    bar.addEventListener("mouseenter",()=>bar.style.transform="scale(1.05)");
+    bar.addEventListener("mouseleave",()=>bar.style.transform="scale(1)");
+
+    setTimeout(()=>{
+      bar.style.opacity="0";
+      bar.style.transform="translateY(20px)";
+      setTimeout(()=>bar.remove(),600);
+    },6000);
+
+    const style=document.createElement("style");
+    style.textContent=`
+      @keyframes fadeInUp {
+        from {opacity:0;transform:translateY(40px);}
+        to {opacity:1;transform:translateY(0);}
+      }`;
+    document.head.appendChild(style);
+  }
+
+  // ✅ مراقبة الطلبات الجديدة مثل صفحة الطلبات تماماً
+  import("https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js").then(async ({ initializeApp }) => {
+    const { getDatabase, ref, onValue } = await import("https://www.gstatic.com/firebasejs/10.13.0/firebase-database.js");
+    const app = initializeApp({
+      apiKey: "AIzaSyDtEJYJrmyP45qS2da8Cuc6y6Jv5VD0Uhc",
+      authDomain: "almurad-system.firebaseapp.com",
+      databaseURL: "https://almurad-system-default-rtdb.firebaseio.com/",
+      projectId: "almurad-system",
+      storageBucket: "almurad-system.appspot.com",
+      messagingSenderId: "911755824405",
+      appId: "1:911755824405:web:2bfbd18ddcf038ca48ad1c"
+    });
+
+    const db = getDatabase(app);
+    const ordersRef = ref(db, "orders");
+    let previousCount = 0;
+
+    onValue(ordersRef, (snapshot) => {
+      if (!snapshot.exists()) return;
+      const data = snapshot.val();
+      const count = Object.keys(data).length;
+      if (previousCount && count > previousCount) {
+        const diff = count - previousCount;
+        showNewOrderNotification(diff);
+      }
+      previousCount = count;
+    });
+  });
+</script>
 
 </body>
 </html>
