تفعيل صوت + اهتزاز عند الطلب الجديد

--- a/almurad-system/orders.html
+++ b/almurad-system/orders.html
@@ -1480,6 +1480,85 @@ window.showNewOrderNotification = function(count = 1) {
   },6000);
 };
 </script>
+<!-- ✅ تفعيل الصوت + الاهتزاز عند الطلب الجديد -->
+<script>
+/* 🔹 تفعيل الصوت بالموبايل أول لمسة */
+document.addEventListener("click", function enableSoundOnce() {
+  const silent = new Audio("cash-register-kaching.mp3");
+  silent.volume = 0; // صوت صامت
+  silent.play().catch(()=>{});
+  window.soundAllowed = true;
+  console.log("🔊 تم تفعيل الصوت على الموبايل بنجاح");
+  document.removeEventListener("click", enableSoundOnce);
+}, { once: true });
+
+/* 🔹 تشغيل صوت الإشعار + الاهتزاز عند وصول طلب */
+function playNotificationSound() {
+  if (!window.soundAllowed) return; // المستخدم ما فعّل الصوت بعد
+  try {
+    const audio = new Audio("cash-register-kaching.mp3");
+    audio.volume = 1.0;
+    audio.play().catch(err => console.warn("🔇 لم يتم تشغيل الصوت:", err));
+
+    // 📳 اهتزاز بسيط عند وصول الطلب (مدعوم في معظم الموبايلات)
+    if (navigator.vibrate) {
+      navigator.vibrate([100, 50, 150]); // يهتز 100ms ثم توقف 50ms ثم يهتز 150ms
+    }
+  } catch (err) {
+    console.warn("⚠️ خطأ أثناء تشغيل الصوت أو الاهتزاز:", err);
+  }
+}
+
+/* 🔹 تعديل دالة الإشعار لتستخدم الصوت + الاهتزاز */
+window.showNewOrderNotification = function(count = 1) {
+  const oldBar = document.getElementById("newOrderBar");
+  if (oldBar) oldBar.remove();
+
+  const bar = document.createElement("div");
+  bar.id = "newOrderBar";
+  bar.innerHTML = `
+    <div style="display:flex;align-items:center;gap:12px;animation:fadeInUp 0.4s ease">
+      <span style="font-size:28px;background:#fff;color:#28a745;border-radius:50%;
+      width:46px;height:46px;display:flex;align-items:center;justify-content:center;
+      box-shadow:0 0 10px rgba(255,255,255,0.3)">💵</span>
+      <div>
+        <div style="font-weight:bold;font-size:16px;">وصل ${count} طلب جديد${count>1?"ات":""}!</div>
+        <div style="font-size:13px;opacity:0.9;">تحقق الآن من الطلبات</div>
+      </div>
+    </div>
+  `;
+  Object.assign(bar.style, {
+    position: "fixed",
+    bottom: "25px",
+    right: "25px",
+    background: "linear-gradient(135deg,#28a745,#20c997)",
+    color: "white",
+    padding: "14px 22px",
+    borderRadius: "16px",
+    fontFamily: "Tajawal, sans-serif",
+    boxShadow: "0 8px 25px rgba(0,0,0,0.3)",
+    zIndex: "999999",
+    cursor: "pointer",
+    opacity: "1",
+    transition: "all 0.6s ease"
+  });
+  document.body.appendChild(bar);
+
+  // 🔊📳 صوت + اهتزاز عند الإشعار
+  playNotificationSound();
+
+  // ✨ تفاعل
+  bar.addEventListener("mouseenter",()=>bar.style.transform="scale(1.05)");
+  bar.addEventListener("mouseleave",()=>bar.style.transform="scale(1)");
+
+  setTimeout(()=>{
+    bar.style.opacity="0";
+    bar.style.transform="translateY(20px)";
+    setTimeout(()=>bar.remove(),600);
+  },6000);
+};
+</script>
+
 
 </body>
 </html>
